# movies-service

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md
src/backend/service/: inlines.py
src/backend/service/actors/: admin.py  api_views.py  models.py  serializers.py  urls.py
src/backend/service/actors/migrations/: 0001_initial.py  0002_alter_actor_second_name.py  0003_alter_actor_unique_together.py
src/backend/service/app/: pagination.py  settings.py  urls.py
src/backend/service/directors/: admin.py  api_views.py  models.py  serializers.py  urls.py
src/backend/service/directors/migrations/: 0001_initial.py  0002_alter_director_second_name.py  (+1 more)
src/backend/service/movies/: admin.py  api_views.py  inlines.py  models.py  serializers.py  urls.py  utils.py  views.py
src/backend/service/profiles/: admin.py  api_views.py  inlines.py  models.py  permissions.py  serializers.py  signals.py  urls.py
src/backend/service/reviews/: admin.py  api_views.py  constants.py  inlines.py  models.py  serializers.py  urls.py
src/backend/service/templates/: base.html  index.html
src/backend/service/templatetags/: custom_filters.py
src/backend/service/users/: models.py
src/bot/: aiogram_run.py  config.py  create_bot.py  logger.py
src/bot/api_interaction/: movies_api.py  profiles_api.py  reviews_api.py  users_api.py
src/bot/exceptions/: reviews.py
src/bot/handlers/: __init__.py  reviews.py  settings.py  start.py
src/bot/keyboards/: base.py  reviews.py  settings.py
src/bot/messages/: reviews.py
src/bot/utils/: api_requests.py
(+42 files in other folders)
